-moves everything to Java 8